--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,6 @@ jobs:
           ccache-${DJVULIBRE_VERSION}-py${{ matrix.python }}
         restore-keys:
           ccache-${DJVULIBRE_VERSION}-py${{ matrix.python }}
-      if: ${{ matrix.gamera != 'master' }}
     - name: install DjVuLibre
       run: |
         wget https://downloads.sourceforge.net/project/djvu/DjVuLibre/${DJVULIBRE_VERSION}/djvulibre-${DJVULIBRE_VERSION}.tar.gz
@@ -72,7 +71,7 @@ jobs:
     - name: build the docs
       run: |
         python -m pip install sphinx
-        sphinx-build -W -b doctest doc/api/ tmp
+        PYTHONPATH=$PWD sphinx-build -W -b doctest doc/api/ tmp
     - name: check reST syntax
       run:
         private/check-rst
