--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         sudo apt-get install ccache
         echo "/usr/lib/ccache:$PATH" >> $GITHUB_PATH
     - name: restore ccache data
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: ~/.ccache
         key:
@@ -59,6 +59,9 @@ jobs:
     - name: install Cython
       run:
         python -m pip install Cython
+    - name: install packaging
+      run:
+        python -m pip install packaging
     - name: check changelog syntax
       run:
         dpkg-parsechangelog -ldoc/changelog --all 2>&1 >/dev/null | { ! grep .; }
