--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,11 +101,12 @@ jobs:
       run:
         python setup.py bdist_wheel
     - name: check bdist file
-      run:
-        tar -tvf build/*.whl
+      run: |
+        tar -tvf dist/*.whl | { ! grep -F /djvu/config.pxi; }
+        tar -tvf dist/*.whl | { grep "sexpr.cpython-3[0-9]+-x86_64-linux-gnu.so"; }
     - name: install via bdist_wheel
       run:
-        python -m pip install build/*.whl
+        python -m pip install dist/*.whl
     - name: check import
       run: |
         cd /
