--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,8 +83,10 @@ jobs:
       run:
         python setup.py sdist
     - name: check sdist tarball
-      run:
+      run: |
         tar -tvf dist/*.tar.gz | { ! grep -F /djvu/config.pxi; }
+        tar -tvf dist/*.tar.gz | { grep -F /djvu/sexpr.pyx; }
+        tar -tvf dist/*.tar.gz | { grep -F /djvu/sexpr.pxd; }
     - name: install via sdist
       run:
         python -m pip install dist/*.tar.gz
@@ -100,10 +102,11 @@ jobs:
     - name: build bdist_wheel
       run:
         python setup.py bdist_wheel
+    # Wheels are basically ZIP files.
     - name: check bdist file
       run: |
-        tar -tvf dist/*.whl | { ! grep -F /djvu/config.pxi; }
-        tar -tvf dist/*.whl | { grep "sexpr.cpython-3[0-9]+-x86_64-linux-gnu.so"; }
+        unzip -l dist/*.whl | { ! grep -F /djvu/config.pxi; }
+        unzip -l dist/*.whl | { grep "sexpr.cpython-3[0-9]+-x86_64-linux-gnu.so"; }
     - name: install via bdist_wheel
       run:
         python -m pip install dist/*.whl
