--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,16 @@
-[pycodestyle]
+[flake8]
 filename = *.py,*.pyx,*.px[di]
-ignore = E12,E131,E2,E3,E4,E501,E722,W504
 show-source = true
+exclude =
+    # Git.
+    .git,
+    # Python cache.
+    __pycache__,
+    # Build directories.
+    build,
+    dist,
+    # IDEs.
+    .idea,
+    # CI environment.
+    deps,
+max-line-length = 140
