--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,12 @@ jobs:
     - name: check reST syntax
       run:
         private/check-rst
-    # TODO: Run flake8.
+    - name: install flake8
+      run:
+        python -m pip install --upgrade flake8 pep8-naming
+    #- name: run flake8
+      #run:
+        #python -m flake8 .
     - name: build sdist
       run:
         python setup.py sdist
