improve code style

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,22 @@
-[flake8]
+[pycodestyle]
 filename = *.py,*.pyx,*.px[di]
-show-source = true
+# show-source = true
+ignore = 412,E131,E2,E3,E4,E501,E722,W504
+exclude =
+    # Git.
+    .git,
+    # Python cache.
+    __pycache__,
+    # Build directories.
+    build,
+    dist,
+    # IDEs.
+    .idea,
+    # CI environment.
+    deps,
+max-line-length = 140
+
+[flake8]
 exclude =
     # Git.
     .git,
