--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
         python -m pip install --upgrade flake8 pep8-naming
     - name: run flake8
       run:
-        python -m flake8 tests/ doc/
+        python -m flake8 tests/ doc/ setup.py
     - name: run pycodestyle
       run:
         python -m pycodestyle djvu/
