--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,9 +81,12 @@ jobs:
     - name: install flake8
       run:
         python -m pip install --upgrade flake8 pep8-naming
-    #- name: run flake8
-      #run:
-        #python -m flake8 .
+    - name: run flake8
+      run:
+        python -m flake8 tests/ doc/ setup.py
+    - name: run pycodestyle
+      run:
+        python -m pycodestyle djvu/
     - name: build sdist
       run:
         python setup.py sdist
