--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
   main:
     strategy:
       matrix:
-        python: [3.8, 3.9, '3.10', '3.11']  # , '3.12-dev']
+        python: [3.8, 3.9, '3.10', '3.11', '3.12-dev']
     runs-on: ubuntu-latest
     name: Python ${{ matrix.python }}
     steps:
