--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,11 @@ jobs:
     - name: install wheel
       run:
         python -m pip install wheel
+    # `setuptools` is not included inside a virtual environment any more since Python 3.12:
+    # https://discuss.python.org/t/announcement-pip-23-2-release/29702
+    - name: install setuptools
+      run:
+        python -m pip install --ugprade setuptools
     - name: install Cython
       run:
         python -m pip install Cython
