--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,11 @@ jobs:
     - name: install wheel
       run:
         python -m pip install wheel
+    # `setuptools` is not included inside a virtual environment any more since Python 3.12:
+    # https://discuss.python.org/t/announcement-pip-23-2-release/29702
+    - name: install setuptools
+      run:
+        python -m pip install --upgrade setuptools
     - name: install Cython
       run:
         python -m pip install Cython
@@ -85,9 +90,11 @@ jobs:
     - name: run flake8
       run:
         python -m flake8 tests/ doc/ setup.py
+      if: ${{ matrix.python != '3.12-dev' }}
     - name: run pycodestyle
       run:
         python -m pycodestyle djvu/
+      if: ${{ matrix.python != '3.12-dev' }}
     - name: build sdist
       run:
         python setup.py sdist
@@ -108,15 +115,15 @@ jobs:
         cd /
         pip uninstall -y python-djvulibre
         set +e; python -c 'import djvu'; [ $? -eq 1 ]
-    - name: build bdist_wheel
+    - name: build wheel
       run:
-        python setup.py bdist_wheel
+        python -m pip wheel --verbose --no-deps --wheel-dir dist .
     # Wheels are basically ZIP files.
-    - name: check bdist file
+    - name: check wheel file
       run: |
         unzip -l dist/*.whl | { ! grep -F /djvu/config.pxi; }
         unzip -l dist/*.whl | { grep "sexpr\.cpython-3[[:digit:]]\+-x86_64-linux-gnu\.so"; }
-    - name: install via bdist_wheel
+    - name: install via wheel
       run:
         python -m pip install dist/*.whl
     - name: check import
@@ -128,9 +135,9 @@ jobs:
         cd /
         pip uninstall -y python-djvulibre
         set +e; python -c 'import djvu'; [ $? -eq 1 ]
-    - name: install via setup.py
+    - name: install directly
       run:
-        python setup.py install
+        python -m pip install --verbose .
     - name: check import
       run: |
         cd /
