--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,10 @@ jobs:
     - name: run tests
       run:
         LC_ALL=C python -m unittest discover tests/ -v
+    - name: run mypy
+      run: |
+        python -m pip install mypy
+        mypy djvu/ private/ tests/
     - name: build the docs
       run: |
         python -m pip install sphinx
