--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
   main:
     strategy:
       matrix:
-        python: [3.8, 3.9, '3.10', '3.11', '3.12-dev']
+        python: [3.8, 3.9, '3.10', '3.11', '3.12']
     runs-on: ubuntu-latest
     name: Python ${{ matrix.python }}
     steps:
@@ -90,11 +90,9 @@ jobs:
     - name: run flake8
       run:
         python -m flake8 tests/ doc/ setup.py
-      if: ${{ matrix.python != '3.12-dev' }}
     - name: run pycodestyle
       run:
         python -m pycodestyle djvu/
-      if: ${{ matrix.python != '3.12-dev' }}
     - name: build sdist
       run:
         python setup.py sdist
