--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
   main:
     strategy:
       matrix:
-        python: [3.8, 3.9, '3.10', '3.11', '3.12']
+        python: ['3.8', '3.9', '3.10', '3.11', '3.12']
     runs-on: ubuntu-latest
     name: Python ${{ matrix.python }}
     steps:
@@ -144,5 +144,3 @@ jobs:
       run: |
         cd /
         python -c 'import djvu.sexpr, djvu.decode'
-
-# vim:ts=2 sts=2 sw=2 et
